sender.replaceTrack() fails with InvalidStateError if the transceiver.direction is "inactive" https://bugs.webkit.org/show_bug.cgi?id=191202

Reviewed by Eric Carlson.

LayoutTests/imported/w3c:

Changes made upstreamed.

* web-platform-tests/webrtc/RTCPeerConnection-setRemoteDescription-replaceTrack.https-expected.txt:
* web-platform-tests/webrtc/RTCPeerConnection-setRemoteDescription-replaceTrack.https.html:

Source/WebCore:

Covered by updated test.

* Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::removeTrack):
Update as per spec, in particular make sure to not stop the sender when removing the track.

LayoutTests:

* TestExpectations: skipping a timing out related test.
It is already timing out but is also flaky.


Canonical link: https://commits.webkit.org/206155@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@237916 268f45cc-cd09-0410-ab3c-d52691b4dbfc